--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     <!-- <img class="debug" src="design/mobile-design.jpg" alt="" /> -->
 
     <!-- For Debugging Only - Desktop -->
-    <img class="debug" src="design/desktop-design.jpg" alt="" />
+    <!-- <img class="debug" src="design/desktop-design.jpg" alt="" /> -->
   </body>
 </html>
