--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
       </div>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Mahmoud Elshaer</a>.
-    </div>
+    <section>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Mahmoud Elshaer</a>.
+      </div>
+    </section>
 
     <!-- For Debugging Only - Mobile -->
     <!-- <img class="debug" src="design/mobile-design.jpg" alt="" /> -->
 
     <!-- For Debugging Only - Desktop -->
-    <!-- <img class="debug" src="design/desktop-design.jpg" alt="" /> -->
+    <img class="debug" src="design/desktop-design.jpg" alt="" />
   </body>
 </html>
