--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       </div>
     </main>
 
-    <section>
+    <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Mahmoud Elshaer</a>.
       </div>
-    </section>
+    </footer>
 
     <!-- For Debugging Only - Mobile -->
     <!-- <img class="debug" src="design/mobile-design.jpg" alt="" /> -->
